--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "uuid": "^3.2.1"
   }
 }
