--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
@@ -55,6 +56,7 @@
     "react-redux": "^5.0.7",
     "react-test-renderer": "^16.4.1",
     "redux": "^4.0.0",
+    "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.6",
@@ -62,6 +64,7 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "react-router-dom": "^4.3.1",
     "uuid": "^3.2.1"
   }
