--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,16 @@
         "specialLink": ["hrefLeft", "hrefRight"],
         "aspects": ["noHref", "preferButton"]
       }
+    ],
+    "jsx-a11y/label-has-for": [
+      2,
+      {
+        "components": ["Label"],
+        "required": {
+          "every": ["id"]
+        },
+        "allowChildren": false
+      }
     ]
   },
   "extends": [
