--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
+    "chart.js": "^2.7.2",
     "classnames": "^2.2.6",
     "react-router-dom": "^4.3.1",
     "uuid": "^3.2.1"
